# traffic-simulation-os-project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/: analyser.h  clock.h  deadlock.h  debug.h  map.h  render.h  simulation.h  traffic_light.h  vehicle.h  vehicle_movement.h
maps/: estrada_duas_faixas_horizontal.txt  estrada_duas_faixas_vertical.txt  estrada_uma_faixa_curvada_lado_direito.txt  estrada_uma_faixa_curvada_lado_esquerdo.txt  estrada_uma_faixa_vertical.txt  mapa_exemplo.txt
maps/veiculos/: ambulancia_direita.txt  ambulancia_esquerda.txt  carro_direita.txt  carro_esquerda.txt
res/: ambulance.txt  car-fast.txt  car-meduim.txt  car-slow.txt  light-yellow.txt  map.txt  tile-blocked.txt  tile-road.txt
res/traffic-light/: light-green.txt  light-red.txt
res/vehicle/: ambulance-left.txt  ambulance-right.txt  car-fast-left.txt  car-fast-right.txt  car-medium-left.txt  car-medium-right.txt  car-slow-left.txt  car-slow-right.txt
src/: analyser.c  clock.c  deadlock.c  debug.c  main.c  map.c  render.c  simulation.c  traffic_light.c  vehicle.c  vehicle_movement.c
